--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="css/styles.css">
         <script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script type = "text/javascript" src = "test.js"></script>
+        <script type = "text/javascript" src = "index.js"></script>
     </head>
     
     <body>
